All basic functionality done * added departure/arrival switch on the main page * on resultpage added walk distances and total length * added header to stopspage * lots of tweaks to the looks of the application

--- a/res.qrc
+++ b/res.qrc
@@ -20,5 +20,6 @@
         <file>images/walk.png</file>
         <file>qml/ExtrasConstants.js</file>
         <file>qml/storage.js</file>
+        <file>qml/MyConstants.js</file>
     </qresource>
 </RCC>
