- item animations moved to new component - random tweaks

--- a/symbian.qrc
+++ b/symbian.qrc
@@ -58,5 +58,6 @@
         <file alias="qml/theme.js">qml/common/theme.js</file>
         <file alias="qml/RouteStationDelegate.qml">qml/common/RouteStationDelegate.qml</file>
         <file alias="qml/FavoriteSheet.qml">qml/symbian/FavoriteSheet.qml</file>
+        <file alias="qml/ListItemAnimation.qml">qml/common/ListItemAnimation.qml</file>
     </qresource>
 </RCC>
