Add agreement dialog for the usage of positioning data

--- a/harmattan.qrc
+++ b/harmattan.qrc
@@ -75,5 +75,6 @@
         <file>images/stop.png</file>
         <file>images/position.png</file>
         <file>images/station.png</file>
+        <file alias="qml/Agreement.qml">qml/harmattan/Agreement.qml</file>
     </qresource>
 </RCC>
